Add single member page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="final, project, css, html, sass, hillel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>HLegal: main</title>
+    <title>hLegal: main</title>
   </head>
   <body>
     <main>
