--- a/pages/services.html
+++ b/pages/services.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="final, project, css, html, sass, hillel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/style.css">
-    <title>HLegal: Services</title>
+    <title>hLegal: Services</title>
   </head>
   <body>
     <main>
