Add about us page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   </div>
                   <div class="nav">
                     <nav class="navigation">
-                      <a href="/" class="header-nav-link">about us</a>
+                      <a href="./pages/about.html" class="header-nav-link">about us</a>
                       <a href="./pages/services.html" class="header-nav-link">services</a>
                       <a href="./pages/team.html" class="header-nav-link">team</a>
                       <a href="./pages/publications" class="header-nav-link">publications</a>
@@ -250,9 +250,9 @@
             </div>
           </div>
           <div class="slider">
-            <button type="button" class="team-member-slide active"></button>
-            <button type="button" class="team-member-slide"></button>
-            <button type="button" class="team-member-slide"></button>
+            <button type="button" class="slide active"></button>
+            <button type="button" class="slide"></button>
+            <button type="button" class="slide"></button>
           </div>
         </div>
       </section>
@@ -437,7 +437,7 @@
             <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
           </svg>
         </button>
-        <a href="/" class="nav-link">about us</a>
+        <a href="./pages/about.html" class="nav-link">about us</a>
         <a href="./pages/services.html" class="nav-link">services</a>
         <a href="./pages/team.html" class="nav-link">team</a>
         <a href="./pages/publications.html" class="nav-link">publications</a>
