--- a/pages/team-oksana.html
+++ b/pages/team-oksana.html
@@ -87,7 +87,7 @@
           </div>
           <div class="nav">
             <nav class="navigation">
-              <a href="/" class="header-nav-link">about us</a>
+              <a href="./about.html" class="header-nav-link">about us</a>
               <a href="./services.html" class="header-nav-link">services</a>
               <a href="./team.html" class="header-nav-link nav-link-active">team</a>
               <a href="./publications.html" class="header-nav-link">publications</a>
@@ -189,7 +189,7 @@
             <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
           </svg>
         </button>
-        <a href="/" class="nav-link">about us</a>
+        <a href="./about.html" class="nav-link">about us</a>
         <a href="./services.html" class="nav-link">services</a>
         <a href="./team.html" class="nav-link nav-link-active">team</a>
         <a href="./publications.html" class="nav-link">publications</a>
